fix: missing padding

--- a/src/styles/components/_app-card.scss
+++ b/src/styles/components/_app-card.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   padding: var(--size-3);
   border-radius: var(--radius-3);
   background-color: var(--ui-element-bg);
